--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,7 @@ a, a:hover {
     padding: 40px 0;
 }
 .dsmovie-card {
-  width: 360px;
+  width: 100%;
    
 
 }
@@ -61,12 +61,14 @@ width: 100%;
 border-radius: 8px 8px 0 0;
 }
 .dsmovie-card-description {
-    padding: 10px 0 20px 0;
+    padding: 10px 20px 20px 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
     background-color: var(--white); 
     border-radius: 0 0 8px 8px;
+    justify-content: space-between;
+
 }
 
 .dsmovie-card-description h3{
