--- a/css/styles.css
+++ b/css/styles.css
@@ -88,3 +88,7 @@ font-weight: 700;
    justify-content: center;
    border-radius: 4px;
 }
+.dsmovie-form-container {
+    padding: 40px 0;
+    max-width: 260px;
+}
