--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,9 @@
     --color-primary:#4D41C0;
     --white: #fff
     --text-light-gray: #aaa;
+    --star-yellow: #FFBB3A;
+
+    
 }
 * {
     box-sizing:border-box;
@@ -69,6 +72,7 @@ border-radius: 8px 8px 0 0;
     background-color: var(--white); 
     border-radius: 0 0 8px 8px;
     justify-content: space-between;
+    height: 220px;
 
 }
 
@@ -77,6 +81,31 @@ margin-bottom: 25px;
 font-size: 14px;
 font-weight: 700;
 }
+
+.dsmovie-card-description-botton {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.dsmovie-card-description-botton h4 {
+    font-size: 16px;
+    font-weight: 700;
+    color: var(--star-yellow);
+}
+
+.dsmovie-card-description-botton img {
+    width: 22px;
+
+}
+
+.dsmovie-card-description-botton p {
+    font-size: 12px;
+    font-weight: 400;
+    color: var(--text-light-gray);
+    margin-bottom: 10px;
+}
+
 .dsmovie-btn, .dsmovie-btn:hover{
    width: 180px; 
    height: 40px;
