--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ a, a:hover {
     margin-right: 10px;
 }
 #dsmovie-card-list {
-    padding: 40px 0;
+    padding: 40px 10px;
 }
 .dsmovie-card {
   width: 100%;
@@ -72,12 +72,12 @@ border-radius: 8px 8px 0 0;
     background-color: var(--white); 
     border-radius: 0 0 8px 8px;
     justify-content: space-between;
-    height: 220px;
+    height: 190px;
 
 }
 
 .dsmovie-card-description h3{
-margin-bottom: 25px;
+margin-bottom: 10px;
 font-size: 14px;
 font-weight: 700;
 }
